<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:layout_width="fill_parent"
                android:layout_height="74dp"
                android:text="Activate/Deactivate Reminders for scheduled medications"
                android:id="@+id/b3_1_1"
                android:background="#2e26ff"
                android:textColor="#fdfdfe"
                android:textStyle="bold|italic"
                android:clickable="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Medication Name"
                android:id="@+id/tv3_1_1"
                android:textColor="#2c51fd"
                android:textSize="20dp"
                android:textStyle="bold" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:inputType="text"
                android:textColor="#0b0b0b"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Reminders Time"
                android:id="@+id/tv3_1_2"
                android:textColor="#2c51fd"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner3_1_1"
                android:spinnerMode="dropdown"
                android:entries="@array/medTimes" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Schedule"
                android:id="@+id/tv3_1_3"
                android:textColor="#2c51fd"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start on"
                android:id="@+id/tv3_1_4"
                android:textColor="#0b0b0b"
                android:textSize="15dp"
                android:textStyle="bold|italic" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_set_date"
                android:onClick="setDate"
                android:id="@+id/b3_1_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_string"
                android:id="@+id/tv3_1_5" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_days"
                android:id="@+id/b3_1_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Shape and Color"
                android:id="@+id/tv3_1_6"
                android:textColor="#2c51fd"
                android:textStyle="bold"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1" >

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SET SHAPE"
                    android:id="@+id/b3_1_4"
                    android:layout_weight="0.50" />

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SET COLOR"
                    android:id="@+id/b3_1_5"
                    android:layout_weight="0.50" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:weightSum="1" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:id="@+id/image3_1_1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:id="@+id/image3_1_2" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dosage"
                android:id="@+id/tv3_1_7"
                android:textColor="#2c51fd"
                android:textStyle="bold"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:id="@+id/editText2"
                    android:textColor="#0b0b0b"
                    android:textSize="15dp"
                    android:textStyle="bold|italic"
                    android:inputType="number" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.50"
                    android:id="@+id/spinner3_1_2"
                    android:spinnerMode="dropdown"
                    android:entries="@array/medTimes" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Instructions"
                android:id="@+id/tv3_1_8"
                android:textColor="#2c51fd"
                android:textSize="20dp"
                android:textStyle="bold" />

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:spinnerMode="dropdown"
                android:entries="@array/medInstructions"
                android:id="@+id/spinner3_1_3" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
